--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "api-dynamodb",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "dev": "nodemon --config nodemon.json src/app.ts",
-    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts",
+    "start": "tsc && node dist/server.js",
+    "dev": "nodemon --config nodemon.json src/server.ts",
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,12 +15,15 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.12",
+    "@types/uuid": "^8.3.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
