--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/uuid": "^8.3.3",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
